--- a/src/simdsp.ui
+++ b/src/simdsp.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>SimDSP</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../resources/images/simdsp_icon.png</normaloff>../resources/images/simdsp_icon.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true"/>
   </property>
