--- a/src/project/sdprojectexplorer.ui
+++ b/src/project/sdprojectexplorer.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Projects</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="leftMargin">
@@ -35,7 +35,7 @@
    <property name="spacing">
     <number>2</number>
    </property>
-   <item row="0" column="0">
+   <item row="1" column="1">
     <widget class="QTreeWidget" name="projectTreeWidget">
      <property name="styleSheet">
       <string notr="true"/>
@@ -43,11 +43,35 @@
      <property name="dragEnabled">
       <bool>false</bool>
      </property>
+     <property name="columnCount">
+      <number>2</number>
+     </property>
+     <attribute name="headerVisible">
+      <bool>false</bool>
+     </attribute>
      <column>
       <property name="text">
        <string>Project</string>
       </property>
      </column>
+     <column>
+      <property name="text">
+       <string notr="true">2</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Projects</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="margin">
+      <number>4</number>
+     </property>
     </widget>
    </item>
   </layout>
