--- a/sdcore/sdcore.ui
+++ b/sdcore/sdcore.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>869</width>
+    <width>995</width>
     <height>376</height>
    </rect>
   </property>
@@ -99,6 +99,9 @@
      <property name="topMargin">
       <number>9</number>
      </property>
+     <item row="2" column="0">
+      <widget class="SDKeyboard" name="widgetKeyboard" native="true"/>
+     </item>
      <item row="0" column="0">
       <layout class="QFormLayout" name="formLayout">
        <property name="rowWrapPolicy">
@@ -116,7 +119,33 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <item row="0" column="0">
+       <item row="1" column="0">
+        <widget class="QLabel" name="fsLabel">
+         <property name="font">
+          <font>
+           <family>Open Sans</family>
+          </font>
+         </property>
+         <property name="text">
+          <string>Sampling Rate:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLabel" name="fsValue">
+         <property name="font">
+          <font>
+           <family>Open Sans</family>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>8000.0 Hz</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
         <widget class="QLabel" name="inputLabel">
          <property name="font">
           <font>
@@ -131,7 +160,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
+       <item row="2" column="1">
         <widget class="QComboBox" name="inputComboBox">
          <property name="enabled">
           <bool>true</bool>
@@ -161,6 +190,11 @@
          </item>
          <item>
           <property name="text">
+           <string>Noise</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>File</string>
           </property>
          </item>
@@ -171,7 +205,7 @@
          </item>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="3" column="0">
         <widget class="QLabel" name="frequencyLabel">
          <property name="font">
           <font>
@@ -186,7 +220,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="3" column="1">
         <widget class="QSpinBox" name="frequencySpinBox">
          <property name="suffix">
           <string>Hz</string>
@@ -205,7 +239,20 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="4" column="0">
+        <widget class="QCheckBox" name="awgnCheckBox">
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
+         </property>
+         <property name="text">
+          <string>AWGN</string>
+         </property>
+         <property name="tristate">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
         <layout class="QGridLayout" name="gridLayout">
          <property name="topMargin">
           <number>9</number>
@@ -327,64 +374,36 @@
          </item>
         </layout>
        </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="fsLabel">
-         <property name="font">
-          <font>
-           <family>Open Sans</family>
-          </font>
-         </property>
-         <property name="text">
-          <string>Sampling Rate:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLabel" name="fsValue">
-         <property name="font">
-          <font>
-           <family>Open Sans</family>
-           <weight>50</weight>
-           <bold>false</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string>8000.0 Hz</string>
-         </property>
-        </widget>
+       <item row="4" column="1">
+        <layout class="QGridLayout" name="snrLayout" columnstretch="3,0">
+         <item row="0" column="0">
+          <widget class="QSpinBox" name="snrSpinBox">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="maximum">
+            <number>40</number>
+           </property>
+           <property name="value">
+            <number>40</number>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLabel" name="snrLabel">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>SNR(dB)</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </item>
-     <item row="2" column="0">
-      <widget class="SDKeyboard" name="widgetKeyboard" native="true"/>
-     </item>
-     <item row="3" column="0">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
     </layout>
-   </item>
-   <item row="1" column="1">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item row="1" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -455,6 +474,19 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="1" column="1">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
