Fixed highligther and new theme

--- a/resources/stylesheets/simdsp-design.qss
+++ b/resources/stylesheets/simdsp-design.qss
@@ -80,7 +80,8 @@ QToolButton {
 
 
 QPlainTextEdit{
-    background-color: #FCFCFC;
+    background-color: #FAFAFA;
+    color: #383a42;
 }
 
 QTextEdit#appOutput{
