--- a/src/simdsp.ui
+++ b/src/simdsp.ui
@@ -221,7 +221,7 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>11</pointsize>
+             <pointsize>10</pointsize>
             </font>
            </property>
            <property name="autoFillBackground">
@@ -281,8 +281,8 @@
             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Ubuntu'; font-size:11pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
           </widget>
          </item>
@@ -299,7 +299,7 @@ p, li { white-space: pre-wrap; }
      <x>0</x>
      <y>0</y>
      <width>610</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -414,7 +414,7 @@ p, li { white-space: pre-wrap; }
      <normaloff>:/resources/images/icons/load_mat.png</normaloff>:/resources/images/icons/load_mat.png</iconset>
    </property>
    <property name="text">
-    <string>Load</string>
+    <string>Load Mat File</string>
    </property>
    <property name="toolTip">
     <string>Load Mat File</string>
@@ -516,7 +516,7 @@ p, li { white-space: pre-wrap; }
      <normaloff>:/resources/images/icons/save_mat.png</normaloff>:/resources/images/icons/save_mat.png</iconset>
    </property>
    <property name="text">
-    <string>Save</string>
+    <string>Save Mat File</string>
    </property>
    <property name="toolTip">
     <string>Save Mat File</string>
