--- a/sdcore/sdkeyboard.ui
+++ b/sdcore/sdkeyboard.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>353</width>
-    <height>128</height>
+    <width>351</width>
+    <height>145</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -35,12 +35,15 @@
    <property name="bottomMargin">
     <number>0</number>
    </property>
+   <property name="spacing">
+    <number>0</number>
+   </property>
    <item row="0" column="0">
     <widget class="QGroupBox" name="keyboardGroupBox">
      <property name="font">
       <font>
-       <weight>50</weight>
-       <bold>false</bold>
+       <family>Open Sans</family>
+       <pointsize>10</pointsize>
       </font>
      </property>
      <property name="styleSheet">
@@ -87,22 +90,28 @@ QGroupBox::title {
       <item>
        <layout class="QGridLayout" name="keyboardLayout">
         <property name="leftMargin">
-         <number>2</number>
+         <number>0</number>
         </property>
         <property name="topMargin">
-         <number>2</number>
+         <number>0</number>
         </property>
         <property name="rightMargin">
-         <number>2</number>
+         <number>0</number>
         </property>
         <property name="bottomMargin">
-         <number>2</number>
+         <number>0</number>
         </property>
         <property name="spacing">
          <number>3</number>
         </property>
         <item row="3" column="3">
          <widget class="QPushButton" name="keyC">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>C</string>
           </property>
@@ -113,6 +122,12 @@ QGroupBox::title {
         </item>
         <item row="4" column="2">
          <widget class="QPushButton" name="keyE">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>E</string>
           </property>
@@ -123,6 +138,12 @@ QGroupBox::title {
         </item>
         <item row="3" column="0">
          <widget class="QPushButton" name="key7">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>7</string>
           </property>
@@ -133,6 +154,12 @@ QGroupBox::title {
         </item>
         <item row="2" column="2">
          <widget class="QPushButton" name="key6">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>6</string>
           </property>
@@ -143,6 +170,12 @@ QGroupBox::title {
         </item>
         <item row="2" column="1">
          <widget class="QPushButton" name="key5">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>5</string>
           </property>
@@ -153,6 +186,12 @@ QGroupBox::title {
         </item>
         <item row="3" column="2">
          <widget class="QPushButton" name="key9">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>9</string>
           </property>
@@ -163,6 +202,12 @@ QGroupBox::title {
         </item>
         <item row="4" column="3">
          <widget class="QPushButton" name="keyD">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>D</string>
           </property>
@@ -173,6 +218,12 @@ QGroupBox::title {
         </item>
         <item row="4" column="0">
          <widget class="QPushButton" name="key0">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>0</string>
           </property>
@@ -183,6 +234,12 @@ QGroupBox::title {
         </item>
         <item row="2" column="3">
          <widget class="QPushButton" name="keyB">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>B</string>
           </property>
@@ -193,6 +250,12 @@ QGroupBox::title {
         </item>
         <item row="2" column="0">
          <widget class="QPushButton" name="key4">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>4</string>
           </property>
@@ -203,6 +266,12 @@ QGroupBox::title {
         </item>
         <item row="4" column="1">
          <widget class="QPushButton" name="keyF">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>F</string>
           </property>
@@ -213,6 +282,12 @@ QGroupBox::title {
         </item>
         <item row="3" column="1">
          <widget class="QPushButton" name="key8">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>8</string>
           </property>
@@ -223,6 +298,12 @@ QGroupBox::title {
         </item>
         <item row="0" column="1">
          <widget class="QPushButton" name="key2">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>2</string>
           </property>
@@ -233,6 +314,12 @@ QGroupBox::title {
         </item>
         <item row="0" column="2">
          <widget class="QPushButton" name="key3">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>3</string>
           </property>
@@ -243,6 +330,12 @@ QGroupBox::title {
         </item>
         <item row="0" column="3">
          <widget class="QPushButton" name="keyA">
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>A</string>
           </property>
@@ -258,6 +351,12 @@ QGroupBox::title {
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <family>Open Sans</family>
+            <pointsize>10</pointsize>
+           </font>
           </property>
           <property name="statusTip">
            <string/>
