--- a/src/project/sdprojectexplorer.ui
+++ b/src/project/sdprojectexplorer.ui
@@ -43,6 +43,9 @@
      <property name="dragEnabled">
       <bool>false</bool>
      </property>
+     <property name="alternatingRowColors">
+      <bool>false</bool>
+     </property>
      <property name="columnCount">
       <number>3</number>
      </property>
