Added Flags in Build Options

--- a/src/project/sdbuildoptions.ui
+++ b/src/project/sdbuildoptions.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>596</width>
-    <height>428</height>
+    <height>532</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -139,20 +139,6 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="0">
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <property name="spacing">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Build Options</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
    <item row="3" column="0">
     <layout class="QGridLayout" name="gridLayoutLibraries" columnstretch="3,1" columnminimumwidth="0,0">
      <property name="leftMargin">
@@ -242,6 +228,80 @@
       <widget class="QListWidget" name="listWidgetLibraries">
        <property name="selectionMode">
         <enum>QAbstractItemView::ExtendedSelection</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="5" column="0">
+    <layout class="QGridLayout" name="gridLayoutFlags" columnstretch="3,1">
+     <property name="topMargin">
+      <number>0</number>
+     </property>
+     <item row="0" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="addFlags">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="../../simdspresources.qrc">
+           <normaloff>:/resources/images/icons/add.png</normaloff>:/resources/images/icons/add.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="editFlags">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="../../simdspresources.qrc">
+           <normaloff>:/resources/images/icons/edit.png</normaloff>:/resources/images/icons/edit.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="removeFlags">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="../../simdspresources.qrc">
+           <normaloff>:/resources/images/icons/remove.png</normaloff>:/resources/images/icons/remove.png</iconset>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="labelFlags">
+       <property name="text">
+        <string>Flags</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="2">
+      <widget class="QListWidget" name="listWidgetFlags"/>
+     </item>
+    </layout>
+   </item>
+   <item row="0" column="0">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Build Options</string>
        </property>
       </widget>
      </item>
